# shared/data-models/src/index.ts
@@ -3,6 +3,8 @@ export * from './lib/user.entity';
 export * from './lib/profile.entity';
 export * from './lib/expense.entity';
 export * from './lib/expense-split.entity';
+export * from './lib/recurring-expense.entity';
+export * from './lib/recurring-expense-split.entity';
 export * from './lib/group.entity';
 export * from './lib/group-member.entity';
 export * from './lib/group-member-contribution.entity';
@@ -19,6 +21,8 @@ export * from './lib/dto/auth.dto';
 export * from './lib/dto/user.dto';
 export * from './lib/dto/group.dto';
 export * from './lib/dto/expense.dto';
+export * from './lib/dto/recurring-expense.dto';
 export * from './lib/dto/settlement.dto';
 export * from './lib/dto/note.dto';
 export * from './lib/dto/goal.dto';
+export * from './lib/dto/is-ciphertext.decorator';
